congress/datalog/CongressParser.py
# $ANTLR 3.5 /Users/thinrichs/Code/congress/congress/datalog/Congress.g 2015-04-14 16:46:46

import sys
from antlr3 import *
from antlr3.compat import set, frozenset

from antlr3.tree import *




# for convenience in actions
HIDDEN = BaseRecognizer.HIDDEN

# token types
EOF=-1
T__52=52
T__53=53
T__54=54
AND=4
ATOM=5
BYTESTRPREFIX=6
BYTES_CHAR_DQ=7
BYTES_CHAR_SQ=8
BYTES_ESC=9
BYTES_TESC=10
COLONMINUS=11
COLUMN_NAME=12
COLUMN_NUMBER=13
COMMA=14
COMMENT=15
DIGIT=16
EQUAL=17
EXPONENT=18
FLOAT=19
FLOAT_EXP=20
FLOAT_NO_EXP=21
FLOAT_OBJ=22
FRAC_PART=23
HEX_DIGIT=24
ID=25
INT=26
INTEGER_OBJ=27
INT_PART=28
LBRACKET=29
LITERAL=30
LPAREN=31
MODAL=32
NAMED_PARAM=33
NEGATION=34
NOT=35
PROG=36
RBRACKET=37
RPAREN=38
RULE=39
SIGN=40
SLBYTESTRING=41
SLSTRING=42
STRING=43
STRING_ESC=44
STRING_OBJ=45
STRPREFIX=46
STRUCTURED_NAME=47
SYMBOL_OBJ=48
THEORY=49
VARIABLE=50
WS=51

# token names
tokenNames = [
    "<invalid>", "<EOR>", "<DOWN>", "<UP>",
    "AND", "ATOM", "BYTESTRPREFIX", "BYTES_CHAR_DQ", "BYTES_CHAR_SQ", "BYTES_ESC", 
    "BYTES_TESC", "COLONMINUS", "COLUMN_NAME", "COLUMN_NUMBER", "COMMA", 
    "COMMENT", "DIGIT", "EQUAL", "EXPONENT", "FLOAT", "FLOAT_EXP", "FLOAT_NO_EXP", 
    "FLOAT_OBJ", "FRAC_PART", "HEX_DIGIT", "ID", "INT", "INTEGER_OBJ", "INT_PART", 
    "LBRACKET", "LITERAL", "LPAREN", "MODAL", "NAMED_PARAM", "NEGATION", 
    "NOT", "PROG", "RBRACKET", "RPAREN", "RULE", "SIGN", "SLBYTESTRING", 
    "SLSTRING", "STRING", "STRING_ESC", "STRING_OBJ", "STRPREFIX", "STRUCTURED_NAME", 
    "SYMBOL_OBJ", "THEORY", "VARIABLE", "WS", "'.'", "':'", "';'"
]




class CongressParser(Parser):
    grammarFileName = "/Users/thinrichs/Code/congress/congress/datalog/Congress.g"
    api_version = 1
    tokenNames = tokenNames

    def __init__(self, input, state=None, *args, **kwargs):
        if state is None:
            state = RecognizerSharedState()

        super(CongressParser, self).__init__(input, state, *args, **kwargs)

        self.dfa4 = self.DFA4(
            self, 4,
            eot = self.DFA4_eot,
            eof = self.DFA4_eof,
            min = self.DFA4_min,
            max = self.DFA4_max,
            accept = self.DFA4_accept,
            special = self.DFA4_special,
            transition = self.DFA4_transition
            )




        self.delegates = []

	self._adaptor = None
	self.adaptor = CommonTreeAdaptor()



    def getTreeAdaptor(self):
        return self._adaptor

    def setTreeAdaptor(self, adaptor):
        self._adaptor = adaptor

    adaptor = property(getTreeAdaptor, setTreeAdaptor)


    class prog_return(ParserRuleReturnScope):
        def __init__(self):
            super(CongressParser.prog_return, self).__init__()

            self.tree = None





    # $ANTLR start "prog"
    # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:56:1: prog : ( formula ( formula )* EOF -> ^( THEORY ( formula )+ ) | EOF );
    def prog(self, ):
        retval = self.prog_return()
        retval.start = self.input.LT(1)


        root_0 = None

        EOF3 = None
        EOF4 = None
        formula1 = None
        formula2 = None

        EOF3_tree = None
        EOF4_tree = None
        stream_EOF = RewriteRuleTokenStream(self._adaptor, "token EOF")
        stream_formula = RewriteRuleSubtreeStream(self._adaptor, "rule formula")
        try:
            try:
                # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:57:5: ( formula ( formula )* EOF -> ^( THEORY ( formula )+ ) | EOF )
                alt2 = 2
                LA2_0 = self.input.LA(1)

                if (LA2_0 == ID or LA2_0 == NEGATION) :
                    alt2 = 1
                elif (LA2_0 == EOF) :
                    alt2 = 2
                else:
                    nvae = NoViableAltException("", 2, 0, self.input)

                    raise nvae


                if alt2 == 1:
                    # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:57:7: formula ( formula )* EOF
                    pass 
                    self._state.following.append(self.FOLLOW_formula_in_prog257)
                    formula1 = self.formula()

                    self._state.following.pop()
                    stream_formula.add(formula1.tree)


                    # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:57:15: ( formula )*
                    while True: #loop1
                        alt1 = 2
                        LA1_0 = self.input.LA(1)

                        if (LA1_0 == ID or LA1_0 == NEGATION) :
                            alt1 = 1


                        if alt1 == 1:
                            # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:57:15: formula
                            pass 
                            self._state.following.append(self.FOLLOW_formula_in_prog259)
                            formula2 = self.formula()

                            self._state.following.pop()
                            stream_formula.add(formula2.tree)



                        else:
                            break #loop1


                    EOF3 = self.match(self.input, EOF, self.FOLLOW_EOF_in_prog262) 
                    stream_EOF.add(EOF3)


                    # AST Rewrite
                    # elements: formula
                    # token labels: 
                    # rule labels: retval
                    # token list labels: 
                    # rule list labels: 
                    # wildcard labels: 
                    retval.tree = root_0
                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 57:28: -> ^( THEORY ( formula )+ )
                    # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:57:31: ^( THEORY ( formula )+ )
                    root_1 = self._adaptor.nil()
                    root_1 = self._adaptor.becomeRoot(
                    self._adaptor.createFromType(THEORY, "THEORY")
                    , root_1)

                    # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:57:40: ( formula )+
                    if not (stream_formula.hasNext()):
                        raise RewriteEarlyExitException()

                    while stream_formula.hasNext():
                        self._adaptor.addChild(root_1, stream_formula.nextTree())


                    stream_formula.reset()

                    self._adaptor.addChild(root_0, root_1)




                    retval.tree = root_0




                elif alt2 == 2:
                    # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:58:7: EOF
                    pass 
                    root_0 = self._adaptor.nil()


                    EOF4 = self.match(self.input, EOF, self.FOLLOW_EOF_in_prog279)
                    EOF4_tree = self._adaptor.createWithPayload(EOF4)
                    self._adaptor.addChild(root_0, EOF4_tree)




                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            pass
        return retval

    # $ANTLR end "prog"


    class formula_return(ParserRuleReturnScope):
        def __init__(self):
            super(CongressParser.formula_return, self).__init__()

            self.tree = None





    # $ANTLR start "formula"
    # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:61:1: formula : bare_formula ( formula_terminator )? -> bare_formula ;
    def formula(self, ):
        retval = self.formula_return()
        retval.start = self.input.LT(1)


        root_0 = None

        bare_formula5 = None
        formula_terminator6 = None

        stream_bare_formula = RewriteRuleSubtreeStream(self._adaptor, "rule bare_formula")
        stream_formula_terminator = RewriteRuleSubtreeStream(self._adaptor, "rule formula_terminator")
        try:
            try:
                # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:62:5: ( bare_formula ( formula_terminator )? -> bare_formula )
                # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:62:7: bare_formula ( formula_terminator )?
                pass 
                self._state.following.append(self.FOLLOW_bare_formula_in_formula296)
                bare_formula5 = self.bare_formula()

                self._state.following.pop()
                stream_bare_formula.add(bare_formula5.tree)


                # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:62:20: ( formula_terminator )?
                alt3 = 2
                LA3_0 = self.input.LA(1)

                if (LA3_0 == 52 or LA3_0 == 54) :
                    alt3 = 1
                if alt3 == 1:
                    # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:62:20: formula_terminator
                    pass 
                    self._state.following.append(self.FOLLOW_formula_terminator_in_formula298)
                    formula_terminator6 = self.formula_terminator()

                    self._state.following.pop()
                    stream_formula_terminator.add(formula_terminator6.tree)





                # AST Rewrite
                # elements: bare_formula
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 
                retval.tree = root_0
                if retval is not None:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                else:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                root_0 = self._adaptor.nil()
                # 62:40: -> bare_formula
                self._adaptor.addChild(root_0, stream_bare_formula.nextTree())




                retval.tree = root_0





                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            pass
        return retval

    # $ANTLR end "formula"


    class formula_terminator_return(ParserRuleReturnScope):
        def __init__(self):
            super(CongressParser.formula_terminator_return, self).__init__()

            self.tree = None





    # $ANTLR start "formula_terminator"
    # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:65:1: formula_terminator : ( ';' | '.' );
    def formula_terminator(self, ):
        retval = self.formula_terminator_return()
        retval.start = self.input.LT(1)


        root_0 = None

        set7 = None

        set7_tree = None

        try:
            try:
                # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:66:5: ( ';' | '.' )
                # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:
                pass 
                root_0 = self._adaptor.nil()


                set7 = self.input.LT(1)

                if self.input.LA(1) == 52 or self.input.LA(1) == 54:
                    self.input.consume()
                    self._adaptor.addChild(root_0, self._adaptor.createWithPayload(set7))

                    self._state.errorRecovery = False


                else:
                    mse = MismatchedSetException(None, self.input)
                    raise mse





                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            pass
        return retval

    # $ANTLR end "formula_terminator"


    class bare_formula_return(ParserRuleReturnScope):
        def __init__(self):
            super(CongressParser.bare_formula_return, self).__init__()

            self.tree = None





    # $ANTLR start "bare_formula"
    # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:70:1: bare_formula : ( rule | modal );
    def bare_formula(self, ):
        retval = self.bare_formula_return()
        retval.start = self.input.LT(1)


        root_0 = None

        rule8 = None
        modal9 = None


        try:
            try:
                # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:71:5: ( rule | modal )
                alt4 = 2
                alt4 = self.dfa4.predict(self.input)
                if alt4 == 1:
                    # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:71:7: rule
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_rule_in_bare_formula345)
                    rule8 = self.rule()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, rule8.tree)



                elif alt4 == 2:
                    # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:72:7: modal
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_modal_in_bare_formula353)
                    modal9 = self.modal()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, modal9.tree)



                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            pass
        return retval

    # $ANTLR end "bare_formula"


    class rule_return(ParserRuleReturnScope):
        def __init__(self):
            super(CongressParser.rule_return, self).__init__()

            self.tree = None





    # $ANTLR start "rule"
    # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:75:1: rule : literal_list COLONMINUS literal_list -> ^( RULE literal_list literal_list ) ;
    def rule(self, ):
        retval = self.rule_return()
        retval.start = self.input.LT(1)


        root_0 = None

        COLONMINUS11 = None
        literal_list10 = None
        literal_list12 = None

        COLONMINUS11_tree = None
        stream_COLONMINUS = RewriteRuleTokenStream(self._adaptor, "token COLONMINUS")
        stream_literal_list = RewriteRuleSubtreeStream(self._adaptor, "rule literal_list")
        try:
            try:
                # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:76:5: ( literal_list COLONMINUS literal_list -> ^( RULE literal_list literal_list ) )
                # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:76:7: literal_list COLONMINUS literal_list
                pass 
                self._state.following.append(self.FOLLOW_literal_list_in_rule370)
                literal_list10 = self.literal_list()

                self._state.following.pop()
                stream_literal_list.add(literal_list10.tree)


                COLONMINUS11 = self.match(self.input, COLONMINUS, self.FOLLOW_COLONMINUS_in_rule372) 
                stream_COLONMINUS.add(COLONMINUS11)


                self._state.following.append(self.FOLLOW_literal_list_in_rule374)
                literal_list12 = self.literal_list()

                self._state.following.pop()
                stream_literal_list.add(literal_list12.tree)


                # AST Rewrite
                # elements: literal_list, literal_list
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 
                retval.tree = root_0
                if retval is not None:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                else:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                root_0 = self._adaptor.nil()
                # 76:44: -> ^( RULE literal_list literal_list )
                # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:76:47: ^( RULE literal_list literal_list )
                root_1 = self._adaptor.nil()
                root_1 = self._adaptor.becomeRoot(
                self._adaptor.createFromType(RULE, "RULE")
                , root_1)

                self._adaptor.addChild(root_1, stream_literal_list.nextTree())

                self._adaptor.addChild(root_1, stream_literal_list.nextTree())

                self._adaptor.addChild(root_0, root_1)




                retval.tree = root_0





                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            pass
        return retval

    # $ANTLR end "rule"


    class literal_list_return(ParserRuleReturnScope):
        def __init__(self):
            super(CongressParser.literal_list_return, self).__init__()

            self.tree = None





    # $ANTLR start "literal_list"
    # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:79:1: literal_list : literal ( COMMA literal )* -> ^( AND ( literal )+ ) ;
    def literal_list(self, ):
        retval = self.literal_list_return()
        retval.start = self.input.LT(1)


        root_0 = None

        COMMA14 = None
        literal13 = None
        literal15 = None

        COMMA14_tree = None
        stream_COMMA = RewriteRuleTokenStream(self._adaptor, "token COMMA")
        stream_literal = RewriteRuleSubtreeStream(self._adaptor, "rule literal")
        try:
            try:
                # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:80:5: ( literal ( COMMA literal )* -> ^( AND ( literal )+ ) )
                # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:80:7: literal ( COMMA literal )*
                pass 
                self._state.following.append(self.FOLLOW_literal_in_literal_list401)
                literal13 = self.literal()

                self._state.following.pop()
                stream_literal.add(literal13.tree)


                # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:80:15: ( COMMA literal )*
                while True: #loop5
                    alt5 = 2
                    LA5_0 = self.input.LA(1)

                    if (LA5_0 == COMMA) :
                        alt5 = 1


                    if alt5 == 1:
                        # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:80:16: COMMA literal
                        pass 
                        COMMA14 = self.match(self.input, COMMA, self.FOLLOW_COMMA_in_literal_list404) 
                        stream_COMMA.add(COMMA14)


                        self._state.following.append(self.FOLLOW_literal_in_literal_list406)
                        literal15 = self.literal()

                        self._state.following.pop()
                        stream_literal.add(literal15.tree)



                    else:
                        break #loop5


                # AST Rewrite
                # elements: literal
                # token labels: 
                # rule labels: retval
                # token list labels: 
                # rule list labels: 
                # wildcard labels: 
                retval.tree = root_0
                if retval is not None:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                else:
                    stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                root_0 = self._adaptor.nil()
                # 80:32: -> ^( AND ( literal )+ )
                # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:80:35: ^( AND ( literal )+ )
                root_1 = self._adaptor.nil()
                root_1 = self._adaptor.becomeRoot(
                self._adaptor.createFromType(AND, "AND")
                , root_1)

                # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:80:41: ( literal )+
                if not (stream_literal.hasNext()):
                    raise RewriteEarlyExitException()

                while stream_literal.hasNext():
                    self._adaptor.addChild(root_1, stream_literal.nextTree())


                stream_literal.reset()

                self._adaptor.addChild(root_0, root_1)




                retval.tree = root_0





                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            pass
        return retval

    # $ANTLR end "literal_list"


    class literal_return(ParserRuleReturnScope):
        def __init__(self):
            super(CongressParser.literal_return, self).__init__()

            self.tree = None





    # $ANTLR start "literal"
    # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:83:1: literal : ( modal -> modal | NEGATION modal -> ^( NOT modal ) );
    def literal(self, ):
        retval = self.literal_return()
        retval.start = self.input.LT(1)


        root_0 = None

        NEGATION17 = None
        modal16 = None
        modal18 = None

        NEGATION17_tree = None
        stream_NEGATION = RewriteRuleTokenStream(self._adaptor, "token NEGATION")
        stream_modal = RewriteRuleSubtreeStream(self._adaptor, "rule modal")
        try:
            try:
                # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:84:5: ( modal -> modal | NEGATION modal -> ^( NOT modal ) )
                alt6 = 2
                LA6_0 = self.input.LA(1)

                if (LA6_0 == ID) :
                    alt6 = 1
                elif (LA6_0 == NEGATION) :
                    alt6 = 2
                else:
                    nvae = NoViableAltException("", 6, 0, self.input)

                    raise nvae


                if alt6 == 1:
                    # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:84:7: modal
                    pass 
                    self._state.following.append(self.FOLLOW_modal_in_literal434)
                    modal16 = self.modal()

                    self._state.following.pop()
                    stream_modal.add(modal16.tree)


                    # AST Rewrite
                    # elements: modal
                    # token labels: 
                    # rule labels: retval
                    # token list labels: 
                    # rule list labels: 
                    # wildcard labels: 
                    retval.tree = root_0
                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 84:23: -> modal
                    self._adaptor.addChild(root_0, stream_modal.nextTree())




                    retval.tree = root_0




                elif alt6 == 2:
                    # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:85:7: NEGATION modal
                    pass 
                    NEGATION17 = self.match(self.input, NEGATION, self.FOLLOW_NEGATION_in_literal456) 
                    stream_NEGATION.add(NEGATION17)


                    self._state.following.append(self.FOLLOW_modal_in_literal458)
                    modal18 = self.modal()

                    self._state.following.pop()
                    stream_modal.add(modal18.tree)


                    # AST Rewrite
                    # elements: modal
                    # token labels: 
                    # rule labels: retval
                    # token list labels: 
                    # rule list labels: 
                    # wildcard labels: 
                    retval.tree = root_0
                    if retval is not None:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "rule retval", retval.tree)
                    else:
                        stream_retval = RewriteRuleSubtreeStream(self._adaptor, "token retval", None)


                    root_0 = self._adaptor.nil()
                    # 85:23: -> ^( NOT modal )
                    # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:85:26: ^( NOT modal )
                    root_1 = self._adaptor.nil()
                    root_1 = self._adaptor.becomeRoot(
                    self._adaptor.createFromType(NOT, "NOT")
                    , root_1)

                    self._adaptor.addChild(root_1, stream_modal.nextTree())

                    self._adaptor.addChild(root_0, root_1)




                    retval.tree = root_0




                retval.stop = self.input.LT(-1)


                retval.tree = self._adaptor.rulePostProcessing(root_0)
                self._adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop)



            except RecognitionException, re:
                self.reportError(re)
                self.recover(self.input, re)
                retval.tree = self._adaptor.errorNode(self.input, retval.start, self.input.LT(-1), re)

        finally:
            pass
        return retval

    # $ANTLR end "literal"


    class modal_return(ParserRuleReturnScope):
        def __init__(self):
            super(CongressParser.modal_return, self).__init__()

            self.tree = None





    # $ANTLR start "modal"
    # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:94:1: modal : ( atom | ID LBRACKET atom RBRACKET -> ^( MODAL ID atom ) );
    def modal(self, ):
        retval = self.modal_return()
        retval.start = self.input.LT(1)


        root_0 = None

        ID20 = None
        LBRACKET21 = None
        RBRACKET23 = None
        atom19 = None
        atom22 = None

        ID20_tree = None
        LBRACKET21_tree = None
        RBRACKET23_tree = None
        stream_LBRACKET = RewriteRuleTokenStream(self._adaptor, "token LBRACKET")
        stream_RBRACKET = RewriteRuleTokenStream(self._adaptor, "token RBRACKET")
        stream_ID = RewriteRuleTokenStream(self._adaptor, "token ID")
        stream_atom = RewriteRuleSubtreeStream(self._adaptor, "rule atom")
        try:
            try:
                # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:95:5: ( atom | ID LBRACKET atom RBRACKET -> ^( MODAL ID atom ) )
                alt7 = 2
                LA7_0 = self.input.LA(1)

                if (LA7_0 == ID) :
                    LA7_1 = self.input.LA(2)

                    if (LA7_1 == LBRACKET) :
                        alt7 = 2
                    elif (LA7_1 == EOF or LA7_1 == COLONMINUS or LA7_1 == COMMA or LA7_1 == ID or LA7_1 == LPAREN or LA7_1 == NEGATION or LA7_1 == SIGN or (52 <= LA7_1 <= 54)) :
                        alt7 = 1
                    else:
                        nvae = NoViableAltException("", 7, 1, self.input)

                        raise nvae


                else:
                    nvae = NoViableAltException("", 7, 0, self.input)

                    raise nvae


                if alt7 == 1:
                    # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:95:7: atom
                    pass 
                    root_0 = self._adaptor.nil()


                    self._state.following.append(self.FOLLOW_atom_in_modal517)
                    atom19 = self.atom()

                    self._state.following.pop()
                    self._adaptor.addChild(root_0, atom19.tree)



                elif alt7 == 2:
                    # /Users/thinrichs/Code/congress/congress/datalog/Congress.g:96:7: ID LBRACKET atom RBRACKET
                    pass 
                    ID20 = self.match(self.input, ID, self.FOLLOW_ID_in_modal525) 
                    stream_ID.add(ID20)


                    LBRACKET21 = self.match(self.input, LBRACKET, self.FOLLOW_LBRACKET_in_modal527) 
                    stream_LBRACKET.add(LBRACKET21)


                    self._state.following.append(self.FOLLOW_atom_in_modal529)
                    atom22 = self.atom()

                    self._state.following.pop()
                    stream_atom.add(atom22.tree)


                    RBRACKET23 = self.match(self.input, RBRACKET, self.FOLLOW_RBRACKET_in_modal531) 
                    stream_RBRACKET.add(RBRACKET23)

